# TypeGo

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
deprecated/: slam_sync.launch.py  vision_skill_wrapper.py
deprecated/gear/: gear_wrapper.py
docker/: .env  Dockerfile  env.list
docker/edge/: Dockerfile
serving/: Makefile  clip_service.py  llm_service.py  run.py  run_vision_service.py  service_manager.py  vision_service.py  vlm_service.py  yolo_service.py
serving/docker/: .env  Dockerfile  Dockerfile-jetson
serving/models/: README.md
serving/proto/: hyrch_serving.proto  hyrch_serving_pb2.py  hyrch_serving_pb2_grpc.py
src/livox_udp_receiver/: CMakeLists.txt  package.xml
src/livox_udp_receiver/src/: livox_udp_receiver.cpp
src/typego/: package.xml  setup.cfg  setup.py
src/typego/config/: robot_info.json  slam.yaml  slam_from_previous.yaml
src/typego/launch/: nav2_launch.py  slam_launch.py
src/typego/resource/: guidelines.txt  index.html  prompt_plan copy.txt  prompt_probe.txt  s0_examples.txt  s0_prompt.txt  s1_base_prompt.txt  s1_code2_examples.txt  s1_code2_guidelines.txt  s1_code2_prompt.txt  s1_code_prompt.txt  s1_examples.txt  s1_guidelines.txt  s1_plan_examples.txt  s1_plan_prompt.txt  s1_prompt.txt  s1_user_guidelines.txt  s2_examples.txt  s2_examples_old.txt  s2_prompt.txt  s2_prompt_old.txt  s2_user_guidelines.txt  s2d_base_prompt.txt  s2d_examples.txt  s2d_prompt.txt  s2d_user_guidelines.txt  s2s_base_prompt.txt  s2s_examples.txt  s2s_prompt.txt  s2s_user_guidelines.txt  vlm_prompt.txt  yecl-lab.data
src/typego/typego/: auto_lock_properties.py  frontend_message.py  go2_wrapper.py  llm_controller.py  llm_planner.py  llm_wrapper.py  memory.py  method.py  minispec_interpreter.py  object_tracker.py  pid.py  plan_generator.py  robot_info.py  robot_observation.py  robot_wrapper.py  s0.py  s1.py  s2.py  scene_graph.py  skill_item.py  skillset.py  utils.py  virtual_robot.py  virtual_robot_wrapper.py  webui.py  yolo_client.py
src/typego_sdk/: CMakeLists.txt  package.xml
src/typego_sdk/config/: custom_nav_through_pose_bt.xml  custom_nav_to_pose_bt.xml  cyclonedds_shm.xml  nav2_params.yaml  slam.yaml  slam_from_previous.yaml
src/typego_sdk/launch/: nav2_launch.py  slam_launch.py
src/typego_sdk/resource/: 2nd-floor.data  4th.data  waypoints.csv  yecl-lab.data
src/typego_sdk/scripts/: run-base.sh  run.sh
src/typego_sdk/src/: go2_tf_service.cpp  gstreamer_receiver.cpp  livox_udp_receiver.cpp  waypoints.cpp
test/: calibration.py  dual-sense-test.py  go2-test.py  gpt-latency-measurement.py  interpreter-test.py  tello-test.py  yolo-aio-test.py  yolo-grpc-test.py  yolo-performance.py  yolo-test.py
typefly/: llm_controller.py  llm_planner.py  llm_wrapper.py  minispec_interpreter.py  robot_info.py  robot_wrapper.py  skill_item.py  skillset.py  utils.py  yolo_client.py
typefly/assets/: example_plans.txt  prompt_plan.txt  s1_code_examples.txt  s1_plan_examples.txt  s1_plan_prompt.txt
typefly/proto/: hyrch_serving.proto
typefly/serving/edge/: __main__.py  edge_service.py  run_edge.py  service_manager.py  yolo_service.py
typefly/serving/webui/: __main__.py  robot_info.json  robot_list.json  robot_list_example.json  typefly.py
