[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["typefly*"]

[project]
name = "typefly"
version = "0.1.0"
description = "An low-response latency LLM-based robot control framework."
authors = [{ name = "Guojun Chen", email = "guojun.chen@yale.edu" }]
requires-python = ">= 3.10"
dependencies = [
    "overrides",
    "flask",
    "uvicorn",
    "quart",
    "gradio",
    "grpcio-tools",
    "aiohttp",
    "openai",
    "opencv-python",
    "numpy",
    "pillow",
    "djitellopy"
]